[gd_scene load_steps=23 format=3 uid="uid://dnluh01o141d4"]

[ext_resource type="Script" uid="uid://c5yo2r6b5pqw3" path="res://scripts/theremin.gd" id="1_mqdv8"]
[ext_resource type="Script" uid="uid://bsmcdrdptfmni" path="res://addons/godot_sfxr/SfxrStreamPlayer3D.gd" id="1_xsb8r"]
[ext_resource type="Material" uid="uid://dmgvoay33kbyo" path="res://materials/theremin_base.tres" id="3_fym58"]
[ext_resource type="PackedScene" uid="uid://b0r6edl74ddo7" path="res://addons/godot-xr-tools/interactables/interactable_slider.tscn" id="4_83f55"]
[ext_resource type="Material" uid="uid://r0sy8350ujvk" path="res://materials/theremin_track.tres" id="5_b0swh"]
[ext_resource type="Material" uid="uid://cb0w5x35j58nv" path="res://materials/theremin_handle.tres" id="5_kyiwd"]
[ext_resource type="PackedScene" uid="uid://bddj5m7ull6g0" path="res://addons/godot-xr-tools/interactables/interactable_handle.tscn" id="6_hukli"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="7_1j24s"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="8_ibwva"]
[ext_resource type="Animation" uid="uid://dhjb0e334tfwl" path="res://addons/godot-xr-tools/hands/animations/left/Pinch Flat.res" id="9_2elc2"]
[ext_resource type="Script" uid="uid://du70cfjjupxo6" path="res://addons/godot-xr-tools/hands/poses/hand_pose_settings.gd" id="10_hmbpt"]
[ext_resource type="Animation" uid="uid://dg4v7rqiaje2h" path="res://addons/godot-xr-tools/hands/animations/right/Pinch Flat.res" id="11_4ieqt"]

[sub_resource type="BoxMesh" id="BoxMesh_v0p61"]
size = Vector3(0.65, 0.05, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_vfdja"]
size = Vector3(0.65, 0.05, 0.03)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vacex"]

[sub_resource type="PrismMesh" id="PrismMesh_eah22"]
material = SubResource("StandardMaterial3D_vacex")
size = Vector3(0.16, 0.1, 0.005)

[sub_resource type="BoxMesh" id="BoxMesh_x6i4r"]
material = ExtResource("5_b0swh")
size = Vector3(0.625, 0.005, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_ouwtk"]
size = Vector3(0.1, 0.05, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_kwsv8"]
material = ExtResource("5_kyiwd")
size = Vector3(0.1, 0.05, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_qquej"]
size = Vector3(0.1, 0.05, 0.2)

[sub_resource type="Resource" id="Resource_irq2i"]
script = ExtResource("10_hmbpt")
open_pose = ExtResource("9_2elc2")
closed_pose = ExtResource("9_2elc2")

[sub_resource type="Resource" id="Resource_geuau"]
script = ExtResource("10_hmbpt")
open_pose = ExtResource("11_4ieqt")
closed_pose = ExtResource("11_4ieqt")

[node name="theremin" type="Node3D"]
script = ExtResource("1_mqdv8")

[node name="SfxrStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
volume_db = -30.0
bus = &"theremin_effects"
script = ExtResource("1_xsb8r")
wave/type = 1
sample_params/sound_vol = 0.25
sample_params/sample_rate = 22050.0
envelope/attack_time = 0.0
envelope/sustain_time = 0.25
envelope/punch_time = 0.0
envelope/decay_time = 0.0
frequency/start_frequency = 0.3
frequency/min_freq_cutoff = 0.0
frequency/slide = 0.0
frequency/delta_slide = 0.0
vibrato/depth = 0.0
vibrato/speed = 0.0
arpeggiation/frequency_mult = 0.0
arpeggiation/change_speed = 0.0
duty_cycle/duty_cycle = 0.0
duty_cycle/sweep = 0.0
retrigger/rate = 0.0
flanger/offset = 0.0
flanger/sweep = 0.0
low_pass_filter/cutoff_frequency = 1.0
low_pass_filter/cutoff_sweep = 0.0
low_pass_filter/resonance = 0.0
high_pass_filter/cutoff_frequency = 0.0
high_pass_filter/cutoff_sweep = 0.0

[node name="Frame" type="StaticBody3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="Frame"]
material_override = ExtResource("3_fym58")
mesh = SubResource("BoxMesh_v0p61")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Frame"]
shape = SubResource("BoxShape3D_vfdja")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Frame"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -0.275194, 0.0275288, 0)
mesh = SubResource("PrismMesh_eah22")

[node name="barMesh" type="MeshInstance3D" parent="Frame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0136103, 0.023442, 0)
mesh = SubResource("BoxMesh_x6i4r")
skeleton = NodePath("../../SliderOrigin/InteractableSlider/SliderBody")

[node name="SliderOrigin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.198172, 0, 0)

[node name="InteractableSlider" parent="SliderOrigin" instance=ExtResource("4_83f55")]
slider_limit_max = 0.45
slider_steps = 0.05

[node name="SliderBody" type="StaticBody3D" parent="SliderOrigin/InteractableSlider"]

[node name="handleCollision" type="CollisionShape3D" parent="SliderOrigin/InteractableSlider/SliderBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
shape = SubResource("BoxShape3D_ouwtk")

[node name="handleMesh" type="MeshInstance3D" parent="SliderOrigin/InteractableSlider/SliderBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
mesh = SubResource("BoxMesh_kwsv8")

[node name="handleOrigin" type="Node3D" parent="SliderOrigin/InteractableSlider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)

[node name="InteractableHandle" parent="SliderOrigin/InteractableSlider/handleOrigin" instance=ExtResource("6_hukli")]
collision_layer = 393216
grab_distance = 0.3

[node name="CollisionShape3D" type="CollisionShape3D" parent="SliderOrigin/InteractableSlider/handleOrigin/InteractableHandle"]
shape = SubResource("BoxShape3D_qquej")

[node name="GrabPointHandLeft" parent="SliderOrigin/InteractableSlider/handleOrigin/InteractableHandle" instance=ExtResource("7_1j24s")]
hand_pose = SubResource("Resource_irq2i")

[node name="GrabPointHandRight" parent="SliderOrigin/InteractableSlider/handleOrigin/InteractableHandle" instance=ExtResource("8_ibwva")]
hand_pose = SubResource("Resource_geuau")
